--- a/app/src/main/res/layout/concert_layout.xml
+++ b/app/src/main/res/layout/concert_layout.xml
@@ -2,10 +2,10 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rectangle"
-    android:layout_width="250dp"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center|center_horizontal">
 
 
     <TextView
@@ -13,15 +13,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="1"
+        android:autoSizeMaxTextSize="30sp"
+        android:autoSizeMinTextSize="10sp"
+        android:autoSizeTextType="uniform"
+        android:ellipsize="none"
+        android:gravity="center|center_horizontal"
+        android:hyphenationFrequency="none"
         android:text="Nom artiste très long qui tient pas sur une ligne"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/pays_artiste_concert_view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,11 +39,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:gravity="center"
+        android:layout_marginBottom="15dp"
+        android:autoSizeTextType="uniform"
+        android:gravity="center|center_horizontal"
         android:text="pays artiste"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
