--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:divider="@drawable/divider"
                 android:orientation="vertical"
-                android:showDividers="beginning|end|middle"/>
+                android:showDividers="end|middle"/>
         </ScrollView>
     </HorizontalScrollView>
 
