--- a/app/src/main/res/layout/artist_recycler.xml
+++ b/app/src/main/res/layout/artist_recycler.xml
@@ -39,6 +39,7 @@
         android:layout_marginTop="4dp"
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toggleButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
